[metadata]
name = pyfuzz
version = 1.0.1
description = pyfuzz include Fuzzing modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VraiHack/PyFuzz
author = VraiHak
author_email = vrai.hack@htomail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    colorama>=0.4
    scapy>=2.4
    tabulate
include_package_data = True

[options.entry_points]
console_scripts =
    pyfuzz = pyfuzz.main:start
